# dragoman

./: .aichatignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  dragoman.code-workspace  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dragoman/: __init__.py  agent.py  cli.py  config.py  discovery.py  init_wizard.py  recommend.py  routing.py  secrets.py
dragoman/routers/: __init__.py  ollama.py  openai_compat.py  providers.py
dragoman/templates/: dragoman.md  model-catalogue.md  persona.claude.md
dragoman/templates/agent-memory/dragoman/: MEMORY.md  vendor-anthropic.md  vendor-google.md  vendor-ollama.md  vendor-openai.md  vendor-perplexity.md  vendor-xai.md
dragoman/templates/agent-memory/dragoman/brain/: README.md
dragoman/templates/agents/dragoman/: dragoman.md
tests/: test_agent.py  test_config.py  test_routing.py  test_secrets.py
