[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragoman-ai"
version = "0.6.2"
description = "A small CLI that lets Claude Code reach non-Anthropic models — Ollama, Perplexity, OpenAI, Gemini — through a subagent that knows how to call it."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Ariel Sakin" },
]
keywords = ["claude", "claude-code", "anthropic", "ollama", "perplexity", "openai", "gemini", "multi-model", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["questionary>=2.0"]

[project.urls]
Homepage = "https://github.com/asakin/dragoman"
Repository = "https://github.com/asakin/dragoman"
Issues = "https://github.com/asakin/dragoman/issues"

[project.scripts]
dragoman = "dragoman.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dragoman"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
